Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-141096

[REG 6.9 -> 6.10] Segfault when clicking camera/microphone <permission> element

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.10.1, 6.11.0 Beta3
    • 6.10.0, 6.10
    • WebEngine
    • None
    • 35469ef67 (dev), eabae2f2c (6.10)

      With simplebrowser, open https://permission.site/pepc.html and click the "Use microphone and camera" button.

      Segfault happens in permission_manager_qt.cpp:

      #0  QtWebEngineCore::toQt (blinkPermissions=std::vector of length 2, capacity 2 = {...}) at /home/florian/proj/qt/dev6/qt5/qtwebengine/src/core/permission_manager_qt.cpp:141
      #1  0x00007fffd0b94582 in QtWebEngineCore::PermissionManagerQt::RequestPermissions (this=0x555555be9940, frameHost=0x555555e06310, requestDescription=..., callback=...) at /home/florian/proj/qt/dev6/qt5/qtwebengine/src/core/permission_manager_qt.cpp:677
      #2  0x00007fffd0b94712 in QtWebEngineCore::PermissionManagerQt::RequestPermissionsFromCurrentDocument (this=0x555555be9940, frameHost=0x555555e06310, requestDescription=..., callback=...) at /home/florian/proj/qt/dev6/qt5/qtwebengine/src/core/permission_manager_qt.cpp:688
      #3  0x00007fffda1e6646 in content::PermissionControllerImpl::RequestPermissionsFromCurrentDocument (this=0x555555c18460, render_frame_host=0x555555e06310, request_description=..., callback=...) at ../../../3rdparty/chromium/content/browser/permissions/permission_controller_impl.cc:504
      #4  0x00007fffda1f9313 in content::PermissionServiceImpl::RequestPermissionsInternal (this=0x555556350b30, browser_context=0x555555bd1ed0, permissions=std::vector of length 2, capacity 2 = {...}, request_description=..., callback=...) at ../../../3rdparty/chromium/content/browser/permissions/permission_service_impl.cc:295
      #5  0x00007fffda1f8b49 in content::PermissionServiceImpl::RequestPageEmbeddedPermission (this=0x555556350b30, descriptor=..., callback=...) at ../../../3rdparty/chromium/content/browser/permissions/permission_service_impl.cc:205
      #6  0x00007fffd5541c89 in blink::mojom::PermissionServiceStubDispatch::AcceptWithResponder(blink::mojom::PermissionService*, mojo::Message*, std::unique_ptr<mojo::MessageReceiverWithStatus, std::default_delete<mojo::MessageReceiverWithStatus> >) () from /home/florian/proj/qt/dev6/qt5/qtbase/lib/libQt6WebEngineCore.so.6
      #7  0x00007fffda1f7dbd in blink::mojom::PermissionServiceStub<mojo::UniquePtrImplRefTraits<blink::mojom::PermissionService, std::default_delete<blink::mojom::PermissionService> > >::AcceptWithResponder (this=0x555556359468, message=0x7fffffffbaa0, responder=std::unique_ptr<mojo::MessageReceiverWithStatus> = {...}) at gen/third_party/blink/public/mojom/permissions/permission.mojom.h:426
      #8  0x00007fffe0050503 in mojo::InterfaceEndpointClient::HandleValidatedMessage (this=0x555555da58e0, message=0x7fffffffbaa0) at ../../../3rdparty/chromium/mojo/public/cpp/bindings/lib/interface_endpoint_client.cc:1006
      #9  0x00007fffe004c003 in mojo::InterfaceEndpointClient::HandleIncomingMessageThunk::Accept (this=0x555555da5a28, message=0x7fffffffbaa0) at ../../../3rdparty/chromium/mojo/public/cpp/bindings/lib/interface_endpoint_client.cc:371
      #10 0x00007fffe0062e94 in mojo::MessageDispatcher::Accept (this=0x555555da5a38, message=0x7fffffffbaa0) at ../../../3rdparty/chromium/mojo/public/cpp/bindings/lib/message_dispatcher.cc:48
      #11 0x00007fffe004e522 in mojo::InterfaceEndpointClient::HandleIncomingMessage (this=0x555555da58e0, message=0x7fffffffbaa0) at ../../../3rdparty/chromium/mojo/public/cpp/bindings/lib/interface_endpoint_client.cc:724
      #12 0x00007fffe0066e9b in mojo::internal::MultiplexRouter::ProcessIncomingMessage (this=0x555556357f40, message_wrapper=0x7fffffffbb70, client_call_behavior=mojo::internal::MultiplexRouter::ALLOW_DIRECT_CLIENT_CALLS, current_task_runner=0x5555557ec260) at ../../../3rdparty/chromium/mojo/public/cpp/bindings/lib/multiplex_router.cc:1121
      #13 0x00007fffe00651b0 in mojo::internal::MultiplexRouter::Accept (this=0x555556357f40, message=0x7fffffffbd90) at ../../../3rdparty/chromium/mojo/public/cpp/bindings/lib/multiplex_router.cc:734
      #14 0x00007fffe0062e1c in mojo::MessageDispatcher::Accept (this=0x555556357f70, message=0x7fffffffbd90) at ../../../3rdparty/chromium/mojo/public/cpp/bindings/lib/message_dispatcher.cc:43
      #15 0x00007fffe0044f1e in mojo::Connector::DispatchMessage (this=0x555556357fa0, handle=...) at ../../../3rdparty/chromium/mojo/public/cpp/bindings/lib/connector.cc:562
      #16 0x00007fffe00452e7 in mojo::Connector::ReadAllAvailableMessages (this=0x555556357fa0) at ../../../3rdparty/chromium/mojo/public/cpp/bindings/lib/connector.cc:620
      #17 0x00007fffe00440c6 in mojo::Connector::OnHandleReadyInternal (this=0x555556357fa0, result=0) at ../../../3rdparty/chromium/mojo/public/cpp/bindings/lib/connector.cc:452
      #18 0x00007fffe0043f3e in mojo::Connector::OnWatcherHandleReady (this=0x555556357fa0, interface_name=0x7fffea8e88b0 <blink::mojom::PermissionService::Name_> "blink.mojom.PermissionService", result=0) at ../../../3rdparty/chromium/mojo/public/cpp/bindings/lib/connector.cc:418
      #19 0x00007fffe0049585 in base::internal::DecayedFunctorTraits<void (mojo::Connector::*)(char const*, unsigned int), mojo::Connector*, char const* const&>::Invoke<void (mojo::Connector::*)(char const*, unsigned int), mojo::Connector*, char const*, unsigned int> (method=(void (mojo::Connector::*)(mojo::Connector * const, const char *, unsigned int)) 0x7fffe0043f0e <mojo::Connector::OnWatcherHandleReady(char const*, unsigned int)>, receiver_ptr=@0x7fffffffbfb0: 0x555556357fa0) at ../../../3rdparty/chromium/base/functional/bind_internal.h:729
      #20 0x00007fffe0048dab in base::internal::InvokeHelper<false, base::internal::FunctorTraits<void (mojo::Connector::* const&)(char const*, unsigned int), mojo::Connector*, char const* const&>, void, 0ul, 1ul>::MakeItSo<void (mojo::Connector::* const&)(char const*, unsigned int), std::tuple<base::internal::UnretainedWrapper<mojo::Connector, base::unretained_traits::MayNotDangle, (partition_alloc::internal::RawPtrTraits)0>, base::internal::UnretainedWrapper<char const, base::unretained_traits::MayNotDangle, (partition_alloc::internal::RawPtrTraits)0> > const&, unsigned int> (functor=@0x555556b79730: (void (mojo::Connector::*)(mojo::Connector * const, const char *, unsigned int)) 0x7fffe0053f0e <std::vector<base::raw_ptr<mojo::(anonymous namespace)::ThreadSafeInterfaceEndpointClientProxy::SyncResponseInfo, (partition_alloc::internal::RawPtrTraits)1>, std::allocator<base::raw_ptr<mojo::(anonymous namespace)::ThreadSafeInterfaceEndpointClientProxy::SyncResponseInfo, (partition_alloc::internal::RawPtrTraits)1> > >::_M_check_len(std::vector<base::raw_ptr<mojo::(anonymous namespace)::ThreadSafeInterfaceEndpointClientProxy::SyncResponseInfo, (partition_alloc::internal::RawPtrTraits)1>, std::allocator<base::raw_ptr<mojo::(anonymous namespace)::ThreadSafeInterfaceEndpointClientProxy::SyncResponseInfo, (partition_alloc::internal::RawPtrTraits)1> > >::size_type, char const*) const+102>, bound=std::tuple containing = {...}) at ../../../3rdparty/chromium/base/functional/bind_internal.h:921
      #21 0x00007fffe004851d in base::internal::Invoker<base::internal::FunctorTraits<void (mojo::Connector::* const&)(char const*, unsigned int), mojo::Connector*, char const* const&>, base::internal::BindState<true, true, false, void (mojo::Connector::*)(char const*, unsigned int), base::internal::UnretainedWrapper<mojo::Connector, base::unretained_traits::MayNotDangle, (partition_alloc::internal::RawPtrTraits)0>, base::internal::UnretainedWrapper<char const, base::unretained_traits::MayNotDangle, (partition_alloc::internal::RawPtrTraits)0> >, void(unsigned int)>::RunImpl<void (mojo::Connector::* const&)(char const*, unsigned int), std::tuple<base::internal::UnretainedWrapper<mojo::Connector, base::unretained_traits::MayNotDangle, (partition_alloc::internal::RawPtrTraits)0>, base::internal::UnretainedWrapper<char const, base::unretained_traits::MayNotDangle, (partition_alloc::internal::RawPtrTraits)0> > const&, 0ul, 1ul> (functor=@0x555556b79730: (void (mojo::Connector::*)(mojo::Connector * const, const char *, unsigned int)) 0x7fffe0053f0e <std::vector<base::raw_ptr<mojo::(anonymous namespace)::ThreadSafeInterfaceEndpointClientProxy::SyncResponseInfo, (partition_alloc::internal::RawPtrTraits)1>, std::allocator<base::raw_ptr<mojo::(anonymous namespace)::ThreadSafeInterfaceEndpointClientProxy::SyncResponseInfo, (partition_alloc::internal::RawPtrTraits)1> > >::_M_check_len(std::vector<base::raw_ptr<mojo::(anonymous namespace)::ThreadSafeInterfaceEndpointClientProxy::SyncResponseInfo, (partition_alloc::internal::RawPtrTraits)1>, std::allocator<base::raw_ptr<mojo::(anonymous namespace)::ThreadSafeInterfaceEndpointClientProxy::SyncResponseInfo, (partition_alloc::internal::RawPtrTraits)1> > >::size_type, char const*) const+102>, bound=std::tuple containing = {...}, unbound_args#0=@0x7fffffffc054: 0) at ../../../3rdparty/chromium/base/functional/bind_internal.h:1058
      #22 0x00007fffe0047b4b in base::internal::Invoker<base::internal::FunctorTraits<void (mojo::Connector::* const&)(char const*, unsigned int), mojo::Connector*, char const* const&>, base::internal::BindState<true, true, false, void (mojo::Connector::*)(char const*, unsigned int), base::internal::UnretainedWrapper<mojo::Connector, base::unretained_traits::MayNotDangle, (partition_alloc::internal::RawPtrTraits)0>, base::internal::UnretainedWrapper<char const, base::unretained_traits::MayNotDangle, (partition_alloc::internal::RawPtrTraits)0> >, void(unsigned int)>::Run (base=0x555556b79710, unbound_args#0=0) at ../../../3rdparty/chromium/base/functional/bind_internal.h:978
      #23 0x00007fffd5882c36 in base::RepeatingCallback<void (unsigned int)>::Run(unsigned int) const & (this=0x555556b79788, args#0=0) at ../../../3rdparty/chromium/base/functional/callback.h:344
      #24 0x00007fffd587f3bd in mojo::SimpleWatcher::DiscardReadyState (callback=..., result=0, state=...) at ../../../3rdparty/chromium/mojo/public/cpp/system/simple_watcher.h:192
      #25 0x00007fffd5893d2e in base::internal::DecayedFunctorTraits<void (*)(base::RepeatingCallback<void(unsigned int)> const&, unsigned int, mojo::HandleSignalsState const&), base::RepeatingCallback<void(unsigned int)> const&>::Invoke<void (* const&)(base::RepeatingCallback<void(unsigned int)> const&, unsigned int, mojo::HandleSignalsState const&), base::RepeatingCallback<void(unsigned int)> const&, unsigned int, mojo::HandleSignalsState const&> (function=@0x555556b79780: 0x7fffd587f399 <mojo::SimpleWatcher::DiscardReadyState(base::RepeatingCallback<void (unsigned int)> const&, unsigned int, mojo::HandleSignalsState const&)>) at ../../../3rdparty/chromium/base/functional/bind_internal.h:662
      #26 0x00007fffd588e1e2 in base::internal::InvokeHelper<false, base::internal::FunctorTraits<void (* const&)(base::RepeatingCallback<void(unsigned int)> const&, unsigned int, mojo::HandleSignalsState const&), base::RepeatingCallback<void(unsigned int)> const&>, void, 0ul>::MakeItSo<void (* const&)(base::RepeatingCallback<void(unsigned int)> const&, unsigned int, mojo::HandleSignalsState const&), std::tuple<base::RepeatingCallback<void(unsigned int)> > const&, unsigned int, mojo::HandleSignalsState const&> (functor=@0x555556b79780: 0x7fffd587f399 <mojo::SimpleWatcher::DiscardReadyState(base::RepeatingCallback<void (unsigned int)> const&, unsigned int, mojo::HandleSignalsState const&)>, bound=std::tuple containing = {...}) at ../../../3rdparty/chromium/base/functional/bind_internal.h:921
      #27 0x00007fffd5888847 in base::internal::Invoker<base::internal::FunctorTraits<void (* const&)(base::RepeatingCallback<void(unsigned int)> const&, unsigned int, mojo::HandleSignalsState const&), base::RepeatingCallback<void(unsigned int)> const&>, base::internal::BindState<false, true, false, void (*)(base::RepeatingCallback<void(unsigned int)> const&, unsigned int, mojo::HandleSignalsState const&), base::RepeatingCallback<void(unsigned int)> >, void(unsigned int, mojo::HandleSignalsState const&)>::RunImpl<void (* const&)(base::RepeatingCallback<void(unsigned int)> const&, unsigned int, mojo::HandleSignalsState const&), std::tuple<base::RepeatingCallback<void(unsigned int)> > const&, 0ul> (functor=@0x555556b79780: 0x7fffd587f399 <mojo::SimpleWatcher::DiscardReadyState(base::RepeatingCallback<void (unsigned int)> const&, unsigned int, mojo::HandleSignalsState const&)>, bound=std::tuple containing = {...}, unbound_args#0=@0x7fffffffc234: 0, unbound_args#1=...) at ../../../3rdparty/chromium/base/functional/bind_internal.h:1058
      #28 0x00007fffd5882b2f in base::internal::Invoker<base::internal::FunctorTraits<void (* const&)(base::RepeatingCallback<void(unsigned int)> const&, unsigned int, mojo::HandleSignalsState const&), base::RepeatingCallback<void(unsigned int)> const&>, base::internal::BindState<false, true, false, void (*)(base::RepeatingCallback<void(unsigned int)> const&, unsigned int, mojo::HandleSignalsState const&), base::RepeatingCallback<void(unsigned int)> >, void(unsigned int, mojo::HandleSignalsState const&)>::Run (base=0x555556b79760, unbound_args#0=0, unbound_args#1=...) at ../../../3rdparty/chromium/base/functional/bind_internal.h:978
      #29 0x00007fffe00c2e19 in base::RepeatingCallback<void (unsigned int, mojo::HandleSignalsState const&)>::Run(unsigned int, mojo::HandleSignalsState const&) const & (this=0x7fffffffc320, args#0=0, args#1=...) at ../../../3rdparty/chromium/base/functional/callback.h:344
      #30 0x00007fffe00c104c in mojo::SimpleWatcher::OnHandleReady (this=0x555555e25960, watch_id=1, result=0, state=...) at ../../../3rdparty/chromium/mojo/public/cpp/system/simple_watcher.cc:278
      #31 0x00007fffe00c36fa in base::internal::DecayedFunctorTraits<void (mojo::SimpleWatcher::*)(int, unsigned int, mojo::HandleSignalsState const&), base::WeakPtr<mojo::SimpleWatcher>&&, int&&, unsigned int&&, mojo::HandleSignalsState&&>::Invoke<void (mojo::SimpleWatcher::*)(int, unsigned int, mojo::HandleSignalsState const&), base::WeakPtr<mojo::SimpleWatcher> const&, int, unsigned int, mojo::HandleSignalsState> (method=(void (mojo::SimpleWatcher::*)(mojo::SimpleWatcher * const, int, unsigned int, const mojo::HandleSignalsState &)) 0x7fffe00c0f20 <mojo::SimpleWatcher::OnHandleReady(int, unsigned int, mojo::HandleSignalsState const&)>, receiver_ptr=...) at ../../../3rdparty/chromium/base/functional/bind_internal.h:729
      #32 0x00007fffe00c33ab in base::internal::InvokeHelper<true, base::internal::FunctorTraits<void (mojo::SimpleWatcher::*&&)(int, unsigned int, mojo::HandleSignalsState const&), base::WeakPtr<mojo::SimpleWatcher>&&, int&&, unsigned int&&, mojo::HandleSignalsState&&>, void, 0ul, 1ul, 2ul, 3ul>::MakeItSo<void (mojo::SimpleWatcher::*)(int, unsigned int, mojo::HandleSignalsState const&), std::tuple<base::WeakPtr<mojo::SimpleWatcher>, int, unsigned int, mojo::HandleSignalsState>>(void (mojo::SimpleWatcher::*&&)(int, unsigned int, mojo::HandleSignalsState const&), std::tuple<base::WeakPtr<mojo::SimpleWatcher>, int, unsigned int, mojo::HandleSignalsState>&&) (functor=@0x7fff8c0533a0: (void (mojo::SimpleWatcher::*)(mojo::SimpleWatcher * const, int, unsigned int, const mojo::HandleSignalsState &)) 0x7fffe00c0f20 <mojo::SimpleWatcher::OnHandleReady(int, unsigned int, mojo::HandleSignalsState const&)>, bound=...) at ../../../3rdparty/chromium/base/functional/bind_internal.h:945
      #33 0x00007fffe00c2f34 in base::internal::Invoker<base::internal::FunctorTraits<void (mojo::SimpleWatcher::*&&)(int, unsigned int, mojo::HandleSignalsState const&), base::WeakPtr<mojo::SimpleWatcher>&&, int&&, unsigned int&&, mojo::HandleSignalsState&&>, base::internal::BindState<true, true, false, void (mojo::SimpleWatcher::*)(int, unsigned int, mojo::HandleSignalsState const&), base::WeakPtr<mojo::SimpleWatcher>, int, unsigned int, mojo::HandleSignalsState>, void()>::RunImpl<void (mojo::SimpleWatcher::*)(int, unsigned int, mojo::HandleSignalsState const&), std::tuple<base::WeakPtr<mojo::SimpleWatcher>, int, unsigned int, mojo::HandleSignalsState>, 0ul, 1ul, 2ul, 3ul> (functor=@0x7fff8c0533a0: (void (mojo::SimpleWatcher::*)(mojo::SimpleWatcher * const, int, unsigned int, const mojo::HandleSignalsState &)) 0x7fffe00c0f20 <mojo::SimpleWatcher::OnHandleReady(int, unsigned int, mojo::HandleSignalsState const&)>, bound=...) at ../../../3rdparty/chromium/base/functional/bind_internal.h:1058
      #34 0x00007fffe00c294a in base::internal::Invoker<base::internal::FunctorTraits<void (mojo::SimpleWatcher::*&&)(int, unsigned int, mojo::HandleSignalsState const&), base::WeakPtr<mojo::SimpleWatcher>&&, int&&, unsigned int&&, mojo::HandleSignalsState&&>, base::internal::BindState<true, true, false, void (mojo::SimpleWatcher::*)(int, unsigned int, mojo::HandleSignalsState const&), base::WeakPtr<mojo::SimpleWatcher>, int, unsigned int, mojo::HandleSignalsState>, void()>::RunOnce (base=0x7fff8c053380) at ../../../3rdparty/chromium/base/functional/bind_internal.h:971
      #35 0x00007fffd0b42b51 in base::OnceCallback<void ()>::Run() && (this=0x555555664268) at ../../../3rdparty/chromium/base/functional/callback.h:156
      #36 0x00007fffde842da6 in base::TaskAnnotator::RunTaskImpl (this=0x5555558460d0, pending_task=...) at ./../../../3rdparty/chromium/base/task/common/task_annotator.cc:209
      #37 0x00007fffde894e52 in base::TaskAnnotator::RunTask<base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWorkImpl(base::LazyNow*)::<lambda(perfetto::EventContext&)> >(perfetto::StaticString, base::PendingTask &) (this=0x5555558460d0, event_name=..., pending_task=...) at ../../../3rdparty/chromium/base/task/common/task_annotator.h:106
      #38 0x00007fffde88bf2b in base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWorkImpl (this=0x555555845df0, continuation_lazy_now=0x7fffffffc7e0) at ./../../../3rdparty/chromium/base/task/sequence_manager/thread_controller_with_message_pump_impl.cc:456
      #39 0x00007fffde88af4d in base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWork (this=0x555555845df0) at ./../../../3rdparty/chromium/base/task/sequence_manager/thread_controller_with_message_pump_impl.cc:330
      #40 0x00007fffd0a00e3c in QtWebEngineCore::MessagePumpForUIQt::handleScheduledWork (this=0x5555557f3030) at /home/florian/proj/qt/dev6/qt5/qtwebengine/src/core/browser_main_parts_qt.cpp:154
      #41 0x00007fffd0a00a5b in QtWebEngineCore::MessagePumpForUIQt::MessagePumpForUIQt()::{lambda()#1}::operator()() const (__closure=0x5555557f3068) at /home/florian/proj/qt/dev6/qt5/qtwebengine/src/core/browser_main_parts_qt.cpp:107
      #42 0x00007fffd0a051ac in std::__invoke_impl<void, QtWebEngineCore::MessagePumpForUIQt::MessagePumpForUIQt()::{lambda()#1}&>(std::__invoke_other, QtWebEngineCore::MessagePumpForUIQt::MessagePumpForUIQt()::{lambda()#1}&) (__f=...) at /usr/include/c++/15.2.1/bits/invoke.h:63
      #43 0x00007fffd0a043f4 in std::__invoke_r<void, QtWebEngineCore::MessagePumpForUIQt::MessagePumpForUIQt()::{lambda()#1}&>(QtWebEngineCore::MessagePumpForUIQt::MessagePumpForUIQt()::{lambda()#1}&) (__fn=...) at /usr/include/c++/15.2.1/bits/invoke.h:113
      #44 0x00007fffd0a02cb9 in std::_Function_handler<void (), QtWebEngineCore::MessagePumpForUIQt::MessagePumpForUIQt()::{lambda()#1}>::_M_invoke(std::_Any_data const&) (__functor=...) at /usr/include/c++/15.2.1/bits/std_function.h:292
      #45 0x00007fffd0a34d18 in std::function<void()>::operator() (this=0x5555557f3068) at /usr/include/c++/15.2.1/bits/std_function.h:593
      #46 0x00007fffde6a90d0 in QWebEngineMessagePumpScheduler::timerEvent (this=0x5555557f3050, ev=0x7fff8c055a90) at /home/florian/proj/qt/dev6/qt5/qtwebengine/src/core/api/qwebenginemessagepumpscheduler.cpp:36
      #47 0x00007fffcb69f832 in QObject::event (this=0x5555557f3050, e=0x7fff8c055a90) at /home/florian/proj/qt/dev6/qt5/qtbase/src/corelib/kernel/qobject.cpp:1388
      #48 0x00007ffff71bdf00 in QApplicationPrivate::notify_helper (this=0x5555556064c0, receiver=0x5555557f3050, e=0x7fff8c055a90) at /home/florian/proj/qt/dev6/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3306
      #49 0x00007ffff71bdcc9 in QApplication::notify (this=0x7fffffffd250, receiver=0x5555557f3050, e=0x7fff8c055a90) at /home/florian/proj/qt/dev6/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3256
      #50 0x00007fffcb5feed3 in QCoreApplication::notifyInternal2 (receiver=0x5555557f3050, event=0x7fff8c055a90) at /home/florian/proj/qt/dev6/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1109
      #51 0x00007fffcb5ffadb in QCoreApplication::sendEvent (receiver=0x5555557f3050, event=0x7fff8c055a90) at /home/florian/proj/qt/dev6/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1549
      #52 0x00007fffcb600c33 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x5555556066c0) at /home/florian/proj/qt/dev6/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1904
      #53 0x00007fffcb6003f7 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at /home/florian/proj/qt/dev6/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1757
      #54 0x00007fffcbaffea1 in postEventSourceDispatch (s=0x7fffc0006400) at /home/florian/proj/qt/dev6/qt5/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:246
      #55 0x00007fffc9c7ff4d in g_main_dispatch (context=0x7fffc0000f80) at ../glib/glib/gmain.c:3565
      #56 0x00007fffc9c81617 in g_main_context_dispatch_unlocked (context=0x7fffc0000f80) at ../glib/glib/gmain.c:4425
      #57 g_main_context_iterate_unlocked (context=context@entry=0x7fffc0000f80, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/glib/gmain.c:4490
      #58 0x00007fffc9c81825 in g_main_context_iteration (context=0x7fffc0000f80, may_block=1) at ../glib/glib/gmain.c:4556
      #59 0x00007fffcbb008ac in QEventDispatcherGlib::processEvents (this=0x5555556590d0, flags=...) at /home/florian/proj/qt/dev6/qt5/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:399
      #60 0x00007fffc6b05f90 in QXcbGlibEventDispatcher::processEvents (this=0x5555556590d0, flags=...) at /home/florian/proj/qt/dev6/qt5/qtbase/src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:98
      #61 0x00007fffcb6164b6 in QEventLoop::processEvents (this=0x7fffffffd1c0, flags=...) at /home/florian/proj/qt/dev6/qt5/qtbase/src/corelib/kernel/qeventloop.cpp:104
      #62 0x00007fffcb6168ad in QEventLoop::exec (this=0x7fffffffd1c0, flags=...) at /home/florian/proj/qt/dev6/qt5/qtbase/src/corelib/kernel/qeventloop.cpp:186
      #63 0x00007fffcb5ff879 in QCoreApplication::exec () at /home/florian/proj/qt/dev6/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1452
      #64 0x00007fffcd8436d8 in QGuiApplication::exec () at /home/florian/proj/qt/dev6/qt5/qtbase/src/gui/kernel/qguiapplication.cpp:1973
      #65 0x00007ffff71baaf5 in QApplication::exec () at /home/florian/proj/qt/dev6/qt5/qtbase/src/widgets/kernel/qapplication.cpp:2575
      #66 0x0000555555585f3f in main (argc=2, argv=0x7fffffffd418) at main.cpp:43
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kchehlarski Kaloyan Chehlarski
            the compiler Florian Bruhin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes